<resources>
    <string name="app_name">Inbound Genie</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="package_picture">Package Picture</string>
    <string name="product_amp_description"><![CDATA[PRODUCT & DESCRIPTION]]></string>
    <string name="qty">QTY.</string>
    <string name="enter_package_weight_in_lbs">Enter package weight in lbs</string>
    <string name="length_in_inches">Length In inches</string>
    <string name="height_in_inches">Height In inches</string>
    <string name="width_in_inches">Width In inches</string>
    <string name="scale_weight_picture">Scale/Weight Picture</string>
    <string name="package_measurements_in_inches">Package Measurements in inches</string>
    <string name="top_view">Top view</string>
    <string name="bottom_view">bottom view</string>
    <string name="left_view">Leftview</string>
    <string name="rightview">Right view</string>
    <string name="label_view">Label view</string>
    <string name="damage_view">Damage VIEW</string>
    <string name="pakage_confirm">PLEASE CONFIRM PACKING LIST ITEM</string>
    <string name="part_number">part number</string>
    <string name="manufacturer">manufacturer</string>
    <string name="quantity">Quantity</string>
    <string name="others">OTHERS</string>
    <string name="picture_of_top_fill">picture of top fill</string>
    <string name="top_fill_with_part_package_resting_on_bottom_fill">top fill with part package resting on bottom fill</string>
    <string name="picture_of_bottom_fill_with_part_removed">picture of bottom fill with part removed</string>
    <string name="welcome">Welcome</string>
    <string name="nice_to_see_you">Nice to see you!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="access_level">Access Level</string>
    <string name="internal_inspector">Internal Inspector</string>
    <string name="supplier">Supplier</string>
    <string name="customer">Customer</string>
    <string name="please_enter_your_email_to_reset_password">Please enter your Email to reset password</string>
    <string name="email_example_com">email@example.com</string>
    <string name="email_sent_please_check_your_mail">Email Sent! Please check your mail.</string>
    <string name="do_parts_come_in_a_mbb_esd_bag">Do parts come in a MBB/ESD Bag?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="if_the_answer_is_no_then_please_select">If the answer is NO, then please select</string>
    <string name="reel">REEL</string>
    <string name="tube">TUBE</string>
    <string name="bulk">BULK</string>
    <string name="tray">TRAY</string>
    <string name="is_there_any_punctures_in_bag">Is there any punctures in bag?</string>
    <string name="take_ic">Take picture of bag seal and bag overall</string>
    <string name="msl_sticker">Is there a MSL sticker?</string>
    <string name="na">N/A</string>
    <string name="if_yes_what_sensitive_label">If Yes, what is the moisture sensitivity level marked on the sticker?</string>
    <string name="please_specify_here">please specify here</string>
    <string name="open_bag_take_picture_of_part_resting">Open bag take picture of part resting.</string>
    <string name="is_there_any_hic_card_and_desiccant">Is there any HIC card and desiccant?</string>
    <string name="verify_manufacturer_s_name_logo_appears_on_the_tube">Does the manufacturer\'s name or logo appear to be on the tube?</string>
    <string name="all_tubes_are_the_same_length">All tubes are the same length?</string>
    <string name="any_yellowing_or_scratching">Do the tubes have any issues such as discoloration, scratching or physical damage?</string>
    <string name="all_parts_are_oriented_in_the_same_direction">Are parts oriented in that same direction in all the tubes?</string>
    <string name="weight_tubes_and_take_picture_of_weight_of_1_tube">Weigh one tube and take a picture of the weight.</string>
    <string name="mfg_tube_quantities_consistent">Are the quantities consistent in all the tubes?</string>
    <string name="all_tubes_have_stoppers_and_are_the_same_for_each_tube">All tubes have stoppers and are the same for each tube?</string>
    <string name="factory_package_size">Factory Package Size</string>
    <string name="factory_tube">Enter factory tube quantity</string>
    <string name="number_of_factory_tubes">Number of factory tubes</string>
    <string name="number_of_partial_tubes">Number of partial tubes</string>
    <string name="count_of_partial_tubes_1">Count of partial tubes 1</string>
    <string name="total">Total</string>
    <string name="scan_barcode">SCAN BARCODE</string>
    <string name="does_barcode_match_package_label_manufacturer_label">Does barcode match package label/manufacturer label?</string>
    <string name="reel_quantity_per_label">Reel quantity per label</string>
    <string name="matches_po">Matches PO?</string>
    <string name="leader_tape_proper">Leader tape proper?</string>
    <string name="part_orientation_correct">Part orientation correct?</string>
    <string name="reel_counter_count">reel counter count</string>
    <string name="are_trays_banded_properly_per_datasheet">Are trays banded properly per datasheet?</string>
    <string name="trypartsoriented">Tray parts oriented same way?</string>
    <string name="is_a_top_tray_to_protect_the_parts_if_cardboard_verify_it_is_antistatic">Is a top tray to protect the parts (if cardboard, verify it is antistatic)?</string>
    <string name="chip_orientation_on_trays_is_consistent_and_no_missing_chips">Chip orientation on trays is consistent and no missing chips?</string>
    <string name="note_the_lot_code_and_date_code_verify_they_match_the_outside_packaging_or_label_if_there_is_one_to_compare_with">Note the lot code and date code, verify they match the outside packaging or label if there is one to compare with</string>
    <string name="notehere">Note here</string>
    <string name="how_many_chips_per_mfg_tray_any_partial_trays_if_so_how_many_and_what_count">How many chips per mfg. tray, any partial trays if so how many and what count</string>
    <string name="does_part_have_any_type_of_package">Does part have any type of package?</string>
    <string name="how_many_mfg_bags">How many mfg. bags?</string>
    <string name="qty_per_mfg_bag">Qty. per mfg. bag</string>
    <string name="qty_per_partial_bag">qty. per Partial bag</string>
    <string name="multiple_bag">Multiple bag?</string>
    <string name="counting_scale_weight_and_scale_count">Counting scale weight and scale count</string>
    <string name="part_label_matches_the_part_number_per_packing_slip_and_purchase_order_of_summon_electronics">Part label matches the part number
        per packing slip and purchase order of Summon Electronics</string>
    <string name="if_no_please_specify_here_for_approval">IF no please specify here for approval</string>
    <string name="count_matches_the_packing_slip_and_summon_electronics_po">Count matches the packing slip and Summon Electronics PO</string>
    <string name="damage_of_any_box_container_part_container_mfg_packaging">Damage of any box container, part container, mfg. packaging</string>
    <string name="find_part_marking_section_of_data_sheet_and_enter_here">Find part marking section of data sheet and enter here</string>
    <string name="enter_length_data_with_picture_ft_cm_in_mm">Enter length data with picture (ft, cm, in, mm)</string>
    <string name="part_marking">Part marking</string>
    <string name="length">Length</string>
    <string name="enter_width_data_with_picture_ft_cm_in_mm">Enter width data with picture (ft, cm, in, mm)</string>
    <string name="width">Width</string>
    <string name="enter_thickness_data_with_picture_ft_cm_in_mm">Enter thickness data with picture (ft, cm, in, mm)</string>
    <string name="thickness">Thickness</string>
    <string name="missing_pin">Missing pin?</string>
    <string name="qnty">qnty.</string>
    <string name="top_markings">Top markings</string>
    <string name="notes">Notes</string>
    <string name="body_residue">Body residue</string>
    <string name="build_quality">Build quality</string>
    <string name="leadstraight">Lead straight</string>
    <string name="leadtarnish">Lead tarnish</string>
    <string name="all_done">ALL DONE!</string>
    <string name="oops_connect_your_internet">Oops ! Connect your Internet.</string>
    <string name="retry">Retry</string>
    <string name="server_down">Server down</string>
    <string name="no_internet_found_check_your_internet_connection">No internet found.\nCheck your internet connection or try again</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="please_enter_username">Please enter your username</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="please_enter_password">Please enter your password</string>
    <string name="please_select_access_type">Please Select Access Type</string>
    <string name="password_and_confirm_password_doesnot_match">Password and confirm password doesn\'t match</string>
    <string name="profile_updated_successfully">Profile updated successfully.</string>
    <string name="network_error_toast">Something went wrong</string>
    <string name="please_enter_tracking_number">Tracking Number Required..</string>
    <string name="please_ente_po_number">PO Number Required..</string>
    <string name="choose_image_from">Choose Image From</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="start_camera">Start Camera</string>
    <string name="imageview">imageView</string>
    <string name="delete_success">Images was deleted!</string>
    <string name="delete_failure">Image deletion failed</string>
    <string name="saved_message">Image Saved at %1$s</string>
    <string name="not_saved">Image not saved!</string>
    <string name="error">Error finding image</string>
    <string name="go">GO</string>
    <string name="permission_denied">Permission denied</string>
    <string name="imageview_description">The imageview that contains the emojified picture</string>
    <string name="are_the_parts_orientation_consistent_in_all_trays">are the parts orientation consistent in all trays?</string>
    <string name="height">Height</string>
    <string name="mechanical_inspection">MECHANICAL INSPECTION</string>
    <string name="microscope_inspection">MICROSCOPE INSPECTION</string>
    <string name="do_the_parts_require_detailed_inspection_for_being_high_value">Do the Parts require detailed inspection for being high-value?</string>
    <string name="if_yes_specify_inspection_details_here">If yes, specify inspection details here</string>
    <string name="x_ray_testing">X-Ray Testing</string>
    <string name="how_many_parts_are_inspected">How Many Parts Are Inspected?</string>
    <string name="do_any_parts_in_the_inspection_have_defects_n_cracks_scratches_missing_pieces_etc">Do any parts in the inspection have defects? \n (cracks, scratches, missing pieces, etc.)</string>
</resources>