<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/table_header"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/choose_image_from"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/camera"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/half_black"/>

    <TextView
        android:id="@+id/tv_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/gallery"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/half_black"/>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size" />

</LinearLayout>