<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".Inspection.PageFragments.WeightDiemens">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">


            <EditText
                android:id="@+id/et_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:background="@drawable/shape_bg_edittext"
                android:fontFamily="@font/raleway"
                android:hint="@string/enter_package_weight_in_lbs"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="@dimen/text_size"
                android:layout_margin="10dp"
                android:textAllCaps="true" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:cardCornerRadius="4dp"
            android:layout_marginTop="10dp"
            app:cardUseCompatPadding="true">


            <EditText
                android:id="@+id/et_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.2"
                android:background="@drawable/shape_bg_edittext"
                android:fontFamily="@font/raleway"
                android:hint="@string/length_in_inches"
                android:inputType="text"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:textSize="@dimen/text_size"
                android:textAllCaps="true" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="4dp"
                app:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true">


                <EditText
                    android:id="@+id/et_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    android:background="@drawable/shape_bg_edittext"
                    android:fontFamily="@font/raleway"
                    android:inputType="text"
                    android:hint="@string/height_in_inches"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:textSize="@dimen/text_size"
                    android:textAllCaps="true" />

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="4dp"
                app:cardCornerRadius="4dp"
                app:cardUseCompatPadding="true">


                <EditText
                    android:id="@+id/et_width"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    android:background="@drawable/shape_bg_edittext"
                    android:fontFamily="@font/raleway"
                    android:hint="@string/width_in_inches"
                    android:inputType="text"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:textSize="@dimen/text_size"
                    android:textAllCaps="true" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="4dp"
            app:cardCornerRadius="4dp"
            android:layout_marginTop="10dp"
            app:cardUseCompatPadding="true">


            <ImageView
                android:id="@+id/iv_weight"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:background="@drawable/shape_bg_edittext"
                android:hint="@string/height_in_inches"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@color/table_header"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/scale_weight_picture"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="4dp"
            app:cardCornerRadius="4dp"
            android:layout_marginTop="10dp"
            app:cardUseCompatPadding="true">


            <ImageView
                android:id="@+id/iv_measurement"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:background="@drawable/shape_bg_edittext"
                android:hint="@string/height_in_inches"
                android:src="@drawable/ic_add"
                android:scaleType="centerCrop"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@color/table_header"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/package_measurements_in_inches"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_nxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_gradient_drawable"
            android:paddingLeft="90dp"
            android:paddingTop="10dp"
            android:paddingRight="90dp"
            android:paddingBottom="10dp"
            android:text="NEXT STEP"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold" />

    </LinearLayout>


</ScrollView>

</FrameLayout>